# dcash

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOLT_REMOTE.md  README.md  docker-compose.yml  manifest
.beads/: config.yaml  issues.jsonl  metadata.json
.beads-hooks/: pre-commit
.github/workflows/: cd.yml  ci.yml
backend/: pyproject.toml
backend/app/: accounts.py  auth.py  categories.py  db.py  exceptions.py  fx.py  household.py  ledger.py  main.py  models.py  oauth.py  rates.py  reports.py  schemas.py  seed.py  transactions.py  transfers.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_auth_households.py  0003_core_ledger.py  0004_fx_rates.py  0005_transaction_splits.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_health.py  test_households.py  test_ledger.py  test_rates.py  test_reports.py
docs/: design-system.md  spec.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  router.test.tsx  router.tsx  theme.ts
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: CategoryPicker.tsx  Icon.tsx  OmniboxAdd.tsx  Placeholder.tsx  Sidebar.tsx
frontend/src/i18n/: en.json  i18n.test.ts  index.ts  ru.json
frontend/src/lib/: omnibox.test.ts  omnibox.ts
frontend/src/views/: AccountsView.tsx  DashboardView.tsx  SettingsView.tsx  TransactionsView.tsx  WelcomeView.tsx
scripts/: backup_db.py
