[project]
name = "dcash-backend"
version = "0.1.0"
description = "DCash — household finance tracker (dengi.dev) backend"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]>=2.13",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.18.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 110
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
